syntax = "proto3";
package proto;

option go_package = "./proto";

import "google/protobuf/descriptor.proto";

// protobuf does not directly support constants for versioning purposes, but we
// can emulate the functionality of a CURRENT_VERSION_NUMBER constant by
// defining it as a custom option for a ProtoVersion message whose only purpose
// is to house the value of this option. While a bit hacky, this allows us to
// increment the version number directly in the proto files, rather than needing
// to separately increment two constants in the front-end and back-end code.
extend google.protobuf.MessageOptions {
	int32 current_version_number = 50000;
}

message ProtoVersion {
	// This should be incremented by 1 whenever proto files are changed in a
	// way that will break any saved browser data or old sim links. If you
	// are incrementing this value, then it is assumed that you are also
	// implementing the required conversion code within the
	// updateProtoVersion() method of any affected classes in the UI (or
	// adding this method if it does not exist yet). Likewise, any affected
	// protos need to define an api_version field so that the UI code knows
	// to up-convert these protos to the new format whenever api_version is
	// missing (0) or lower than current_version_number.
	option (current_version_number) = 1;

	// The actual field value is only used within unit tests.
	int32 saved_version_number = 1;
}

message ScalingItemProperties {
    int32 rand_prop_points = 1;
    double weapon_damage_min = 2;
    double weapon_damage_max = 3;
    map<int32, double> stats = 4; // for compactness
	int32 ilvl = 6;
}

enum Spec {
	SpecUnknown = 0;

	SpecBalanceDruid = 1;
	SpecFeralCatDruid = 2;
	SpecFeralBearDruid = 3;
	SpecRestorationDruid = 4;

	SpecHunter = 5;

	SpecMage = 6;

	SpecHolyPaladin = 7;
	SpecProtectionPaladin = 8;
	SpecRetributionPaladin = 9;

	SpecDisciplinePriest = 10;
	SpecHolyPriest = 11;
	SpecShadowPriest = 12;

	SpecRogue = 13;

	SpecElementalShaman = 14;
	SpecEnhancementShaman = 15;
	SpecRestorationShaman = 16;

	SpecWarlock = 17;

	SpecDPSWarrior = 18;
	SpecProtectionWarrior = 19;
}

enum Race {
	RaceUnknown = 0;
	RaceBloodElf = 1;
	RaceDraenei = 2;
	RaceDwarf = 3;
	RaceGnome = 4;
	RaceHuman = 5;
	RaceNightElf = 6;
	RaceOrc = 7;
	RaceTauren = 8;
	RaceTroll = 9;
	RaceUndead = 10;
}

enum Faction {
	Unknown = 0;
	Alliance = 1;
	Horde = 2;
}

// Should aways be in order of dbc class file to properly match class masks
// Found at https://wago.tools/db2/ChrClasses?build=5.5.0.61217&sort%5BID%5D=asc
enum Class {
	ClassUnknown = 0;
	ClassWarrior = 1;
	ClassPaladin = 2;
	ClassHunter = 3;
	ClassRogue = 4;
	ClassPriest = 5;
	ClassShaman = 7;
	ClassMage = 8;
	ClassWarlock = 9;
	ClassDruid = 11;
	ClassExtra1 = 12;
	ClassExtra2 = 13;
	ClassExtra3 = 14;
	ClassExtra4 = 15;
	ClassExtra5 = 16;
	ClassExtra6 = 17;
}

enum Profession {
	ProfessionUnknown = 0;
	Alchemy = 1;
	Blacksmithing = 2;
	Enchanting = 3;
	Engineering = 4;
	Herbalism = 5;
	Inscription = 6;
	Jewelcrafting = 7;
	Leatherworking = 8;
	Mining = 9;
	Skinning = 10;
	Tailoring = 11;
}

// General rules for Stats vs. PseudoStats at the proto level:
//	- Define a property as a Stat if and only if it needs to be present in
//	  one or more stats arrays embedded in the database files, local storage
//	  data, or sim links. This generally means that the property is a BASIC
//	  attribute that is directly found on items or enchants and parsed from
//	  tooltips during database generation. Alternatively, if the stat is
//	  required for reconstructing a target NPC from saved Encounter
//	  settings, then it also belongs in the Stat enum.
//
//	- If the above criterion is not satisfied, then the best practice is to
//	  define the property as a PseudoStat rather than a Stat. For example,
//	  the various school-specific versions of Hit, Crit, and Haste are all
//	  defined as PseudoStats from Cataclysm onwards, since only the generic
//	  Ratings need to be parsed from item data and stored in the sim
//	  database.
//
//	- Note that the above rules apply only for the proto messages used for
//	  saving and loading data in the browser. It is perfectly okay to define
//	  additional Stats in the back-end code for convenience or performance
//	  reasons, such as for automatically propagating linear stat
//	  dependencies when dynamic stat changes occur in a sim iteration. For
//	  example, the SpellHit PseudoStat mentioned above is actually modeled
//	  as a proper Stat in the back-end code so that it can benefit from the
//	  StatDependency tooling, but is converted to a PseudoStat when writing
//	  UnitStats protos for character stats and stat weights requests. This
//	  keeps the item database compact while still giving the UI access to
//	  calculated tertiary stats like SpellHit, MeleeCrit, RangedHaste, etc.
//
//	- When adding new Stats or PseudoStats, make the units for each property
//	  explicit in the name to avoid confusion. For example, append "Rating"
//	  to the end of the field name for properties that are represented in
//	  Rating units (regardless of how they are stored in-game), and append
//	  "Chance" to the end of the field name for properties that represent
//	  probabilities (between 0 and 1).
//
// Keep in sync with sim/core/stats/stats.go. As mentioned above, it is okay for
// the Go Stats array to be larger than the size of the Stat enum proto, but the
// shared indices between the two must exactly match.
//
// NextIndex: 22;
enum Stat {
	// Primary attributes ("main stat")
	StatStrength = 0;
	StatAgility = 1;
	StatStamina = 2;
	StatIntellect = 3;

	// Spell Power and Spell Power derivatives
	StatSpellPower = 4;
	StatHealingPower = 5;
	StatSpellDamage = 6;
	StatArcanePower = 7;
	StatFirePower = 8;
	StatFrostPower = 9;
	StatHolyPower = 10;
	StatNaturePower = 11;
	StatShadowPower = 12;

	// Caster Secondaries
	StatSpellHitRating = 13;
	StatSpellCritRating = 14;
	StatSpellHasteRating = 15;
	StatSpellPenetration = 16;
	StatSpirit = 17;

	// Physical Secondaries
	StatAttackPower = 18;
	StatRangedAttackPower = 19;
	StatFeralAttackPower = 20;
	StatMeleeHitRating = 21;
	StatMeleeCritRating = 22;
	StatMeleeHasteRating = 23;
	StatArmorPenetration = 24;
	StatExpertiseRating = 25;

	// Melee/Ranged School Secondaries
	StatAllPhysHitRating = 26;
	StatAllPhysCritRating = 27;
	StatAllPhysHasteRating = 28;

	// Tank Secondaries
	StatDefenseRating = 29;
	StatBlockRating = 30;
	StatBlockValue = 31;
	StatDodgeRating = 32;
	StatParryRating = 33;
	StatResilienceRating = 34;
	StatArmor = 35;
	StatBonusArmor = 36;

	// Composite stats that are built up from the above gear stats + buffs.
	// These still belong in the Stat enum because they can be present on
	// some enchants and because the base values need to be stored for NPCs.
	StatHealth = 37;
	StatMana = 38;
	StatMP5 = 39;

	// Resistances
	StatArcaneResistance = 40;
	StatFireResistance = 41;
	StatFrostResistance = 42;
	StatNatureResistance = 43;
	StatShadowResistance = 44;

	// DO NOT add new stats here without discussing it first; new stats come
	// with a performance penalty.

	// Checklist for making breaking changes to the Stat enum (deleting
	// stats, re-ordering stats, changing the interpretation of stat values,
	// etc.):
	// (1) Make the desired change in the enum above.
	// (2) Mirror the change in sim/core/stats/stats.go .
	// (3) Update any required code in sim/core for proper sim behavior.
	// (4) If the total number of stats changed, then change the size of the
	//     Stats array type defined in tools/database/wowhead_tooltips.go .
	// (5) Run "make items" so that the sim database reflects the stats
	//     change. At this point, you should see no changes in DPS results
	//     when running "make test", if the only changes made were indexing
	//     or bookkeeping adjustments. However, saved browser settings and
	//     old sim links will be broken on the UI side.
	// (6) Increment the current_version_number option in the ProtoVersion
	//     message at the top of this file.
	// (7) Add a new entry to the ProtoConversionMap within the
	//     migrateStatsArray() method of ui/core/proto_utils/stats.ts . If
	//     the migration function for the new version works properly, then
	//     you should see that stats arrays embedded in local storage data
	//     and old links are automatically converted to new arrays that are
	//     compatible with the new stats interpretation.
}

// Not all pseudostats are included here; just the ones we want to pass
// between the UI and backend. It's also OK to include things here which aren't
// in the PseudoStats struct.
//
// NextIndex: 16;
enum PseudoStat {
	PseudoStatMainHandDps = 0;
	PseudoStatOffHandDps = 1;
	PseudoStatRangedDps = 2;
	PseudoStatBlockValueMultiplier = 3;
	PseudoStatDodgePercent = 4;
	PseudoStatParryPercent = 5;
	BonusPhysicalDamage = 6;

	// Spell School Hit
	PseudoStatSchoolHitArcane = 7;
	PseudoStatSchoolHitFire = 8;
	PseudoStatSchoolHitFrost = 9;
	PseudoStatSchoolHitHoly = 10;
	PseudoStatSchoolHitNature = 11;
	PseudoStatSchoolHitShadow = 12;

	PseudoStatMeleeHitPercent = 13;
	PseudoStatSpellHitPercent = 14;
	PseudoStatMeleeCritPercent = 15;
	PseudoStatSpellCritPercent = 16;
	PseudoStatBlockPercent = 17;

	PseudoStatMeleeSpeedMultiplier = 18;
	PseudoStatRangedSpeedMultiplier = 19;
	PseudoStatCastSpeedMultiplier = 20;
	PseudoStatMeleeHastePercent = 21;
	PseudoStatRangedHastePercent = 22;
	PseudoStatSpellHastePercent = 23;
	PseudoStatBlockValuePerStrength = 24;

	PseudoStatRangedHitPercent = 25;
	PseudoStatRangedCritPercent = 26;
}

message UnitStats {
	// Proto version at the time these stats were saved. If you make any
	// breaking changes to the size, ordering, or interpretation of the
	// stats or pseudoStats arrays, then make sure to increment the
	// current_version_number option in the ProtoVersion message at the top
	// of this file, and also add a new entry to the data conversion map
	// within the migrateStatsArray() method of ui/core/proto_utils/stats.ts
	// A "breaking change" here is defined as anything that will break saved
	// browser data or old sim links; the version need not be incremented if
	// you simply append a new rarely-used PseudoStat to the end of the
	// array, for example.
	int32 api_version = 3;

	repeated double stats = 1;
	repeated double pseudo_stats = 2;
}

enum ItemType {
	ItemTypeUnknown = 0;
	ItemTypeHead = 1;
	ItemTypeNeck = 2;
	ItemTypeShoulder = 3;
	ItemTypeBack = 4;
	ItemTypeChest = 5;
	ItemTypeWrist = 6;
	ItemTypeHands = 7;
	ItemTypeWaist = 8;
	ItemTypeLegs = 9;
	ItemTypeFeet = 10;
	ItemTypeFinger = 11;
	ItemTypeTrinket = 12;
	ItemTypeWeapon = 13;
	ItemTypeRanged = 14;
}

enum ArmorType {
	ArmorTypeUnknown = 0;
	ArmorTypeCloth = 1;
	ArmorTypeLeather = 2;
	ArmorTypeMail = 3;
	ArmorTypePlate = 4;
}

enum WeaponType {
	WeaponTypeUnknown = 0;
	WeaponTypeAxe = 1;
	WeaponTypeDagger = 2;
	WeaponTypeFist = 3;
	WeaponTypeMace = 4;
	WeaponTypeOffHand = 5;
	WeaponTypePolearm = 6;
	WeaponTypeShield = 7;
	WeaponTypeStaff = 8;
	WeaponTypeSword = 9;
}

enum HandType {
	HandTypeUnknown = 0;
	HandTypeMainHand = 1;
	HandTypeOneHand = 2;
	HandTypeOffHand = 3;
	HandTypeTwoHand = 4;
}

enum RangedWeaponType {
	RangedWeaponTypeUnknown = 0;
	RangedWeaponTypeBow = 1;
	RangedWeaponTypeCrossbow = 2;
	RangedWeaponTypeGun = 3;
	RangedWeaponTypeThrown = 4;
	RangedWeaponTypeWand = 5;
	RangedWeaponTypeIdol = 6;
	RangedWeaponTypeLibram = 7;
	RangedWeaponTypeTotem = 8;
	RangedWeaponTypeSigil = 9;
}

// All slots on the gear menu where a single item can be worn.
enum ItemSlot {
	ItemSlotHead = 0;
	ItemSlotNeck = 1;
	ItemSlotShoulder = 2;
	ItemSlotBack = 3;
	ItemSlotChest = 4;
	ItemSlotWrist = 5;
	ItemSlotHands = 6;
	ItemSlotWaist = 7;
	ItemSlotLegs = 8;
	ItemSlotFeet = 9;
	ItemSlotFinger1 = 10;
	ItemSlotFinger2 = 11;
	ItemSlotTrinket1 = 12;
	ItemSlotTrinket2 = 13;
	ItemSlotMainHand = 14; // can be 1h or 2h
	ItemSlotOffHand = 15;
	ItemSlotRanged = 16;
}

enum ItemQuality {
	ItemQualityJunk = 0;
	ItemQualityCommon = 1;
	ItemQualityUncommon = 2;
	ItemQualityRare = 3;
	ItemQualityEpic = 4;
	ItemQualityLegendary = 5;
	ItemQualityArtifact = 6;
	ItemQualityHeirloom = 7;
}

enum GemColor {
	GemColorUnknown = 0;
	GemColorMeta = 1;
	GemColorRed = 2;
	GemColorBlue = 3;
	GemColorYellow = 4;
	GemColorGreen = 5;
	GemColorOrange = 6;
	GemColorPurple = 7;
	GemColorPrismatic = 8;
}

enum SpellSchool {
	SpellSchoolPhysical = 0;
	SpellSchoolArcane = 1;
	SpellSchoolFire = 2;
	SpellSchoolFrost = 3;
	SpellSchoolHoly = 4;
	SpellSchoolNature = 5;
	SpellSchoolShadow = 6;
}

enum TristateEffect {
	TristateEffectMissing = 0;
	TristateEffectRegular = 1;
	TristateEffectImproved = 2;
}

enum Drums {
	DrumsUnknown = 0;
	DrumsOfBattle = 1;
	DrumsOfRestoration = 2;
	DrumsOfWar = 3;
}

enum StrengthOfEarthType {
	None = 0;
	Basic = 1;
	CycloneBonus = 2;
	EnhancingTotems = 3;
	EnhancingAndCyclone = 4;
}

// Buffs that affect the entire raid.
// Reindexed to The Burning Crusade raid buffs.
// Next index: 36
message RaidBuffs {
	bool arcane_brilliance = 1;
	TristateEffect power_word_fortitude = 2;
	bool shadow_protection = 3;
	TristateEffect divine_spirit = 4;
	TristateEffect gift_of_the_wild = 5;
	TristateEffect thorns = 6;
	bool bloodlust = 7; // TBC ANNI - Lust is now raid wide
  }

// Buffs that affect a single party.
message PartyBuffs {
	int32 ferocious_inspiration = 1; // Number of BM hunters in party.

	TristateEffect blood_pact = 2;
	TristateEffect moonkin_aura = 3;
	TristateEffect leader_of_the_pack = 4;
	TristateEffect sanctity_aura = 5;
	TristateEffect devotion_aura = 6;
	TristateEffect retribution_aura = 7;
	bool trueshot_aura = 8;
	bool draenei_racial_melee = 9;
	bool draenei_racial_caster = 10;

	// Drums
	Drums drums = 11;

	// Item Buffs
	int32 atiesh_mage = 12;
	int32 atiesh_warlock = 13;
	bool braided_eternium_chain = 14;
	bool eye_of_the_night = 15;
	bool chain_of_the_twilight_owl = 16;
	bool jade_pendant_of_blasting = 17;

	// Totems
	TristateEffect mana_spring_totem = 18;
	int32 mana_tide_totems = 19;
	int32 totem_of_wrath = 20;
	TristateEffect wrath_of_air_totem = 21;
	bool snapshot_improved_wrath_of_air_totem = 22;
	TristateEffect grace_of_air_totem = 23;
	StrengthOfEarthType strength_of_earth_totem = 24;
	bool snapshot_improved_strength_of_earth_totem = 25;
	bool tranquil_air_totem = 26;

	int32 windfury_totem_rank = 27; // 0 if none, otherwise rank of the ability (1-5).
	int32 windfury_totem_iwt = 28;

	TristateEffect battle_shout = 29;
	bool bs_solarian_sapphire = 30;
	bool snapshot_bs_solarian_sapphire = 31;
	bool snapshot_bs_t2 = 32;
	int32 snapshot_bs_booming_voice_rank = 33;

	// Mitigation buffs
	TristateEffect commanding_shout = 34;
}

// These are usually individual actions taken by other Characters.
message IndividualBuffs {
	// Only used in individual sims
	// as the class that provides these would cast them in raid sim

	bool blessing_of_kings = 1;
	bool blessing_of_salvation = 2;
	bool blessing_of_sanctuary = 3;
	TristateEffect blessing_of_wisdom = 4;
	TristateEffect blessing_of_might = 5;

	int32 shadow_priest_dps = 6;

	bool unleashed_rage = 7;

	// How many of each of these buffs the player will be receiving.
	int32 innervates = 8;
	int32 power_infusions = 9;

	double inspiration_uptime = 10;
}

message Debuffs {
	bool judgement_of_wisdom = 1;
	bool judgement_of_light = 2;
	bool improved_seal_of_the_crusader = 3;
	bool misery = 4;
	TristateEffect curse_of_elements = 5;
	double isb_uptime = 6;
	bool shadow_weaving = 7;

	bool improved_scorch = 8;
	bool winters_chill = 9;

	bool blood_frenzy = 10;
	bool gift_of_arthas = 11;
	bool mangle = 12;
	TristateEffect expose_armor = 13;
	TristateEffect faerie_fire = 14;
	bool sunder_armor = 15;
	bool curse_of_recklessness = 16;

	TristateEffect hunters_mark = 17;
	double expose_weakness_uptime = 18;
	double expose_weakness_hunter_agility = 19;

	TristateEffect demoralizing_roar = 20;
	TristateEffect demoralizing_shout = 21;
	TristateEffect thunder_clap = 22;
	bool insect_swarm = 23;
	bool scorpid_sting = 24;
	bool shadow_embrace = 25;
	bool screech = 26;
}

message ConsumesSpec {
	int32 prepot_id = 1;
	int32 pot_id = 2;
	int32 flask_id = 3;
	int32 battle_elixir_id = 4;
	int32 guardian_elixir_id = 5;
	int32 food_id = 6;
	int32 explosive_id = 7;
	int32 conjured_id = 9;
}

enum MobType {
	MobTypeUnknown = 0;
	MobTypeBeast = 1;
	MobTypeDemon = 2;
	MobTypeDragonkin = 3;
	MobTypeElemental = 4;
	MobTypeGiant = 5;
	MobTypeHumanoid = 6;
	MobTypeMechanical = 7;
	MobTypeUndead = 8;
}

enum InputType {
	Bool = 0;
	Number = 1;
	Enum = 2;
}

message TargetInput {
	InputType input_type = 1;
	string label = 2;
	string tooltip = 5;

	bool bool_value = 3;
	double number_value = 4;

	int32 enum_value = 6;
	repeated string enum_options = 7;
}

message Target {
        // The in-game NPC ID.
        int32 id = 14;
        string name = 15;

        int32 level = 4;
        MobType mob_type = 3;
        repeated double stats = 5;

        // Auto attack parameters.
        double min_base_damage = 7;
        double damage_spread = 19; // replaces tight_enemy_damage
        double swing_speed = 8;
        bool dual_wield = 9;
        bool dual_wield_penalty = 10;
        bool parry_haste = 12;
        bool suppress_dodge = 16; // Sunwell Radiance
        SpellSchool spell_school = 13; // Allows elemental attacks.

        // Index in Raid.tanks indicating the player tanking this mob at the
        // start of each pull.
        // -1 or invalid index indicates not being tanked.
        int32 tank_index = 6;

        // Used in tank swap AIs.
        int32 second_tank_index = 100;

        // Used in dynamic target AIs.
        bool disabled_at_start = 101;

        // Custom Target AI parameters
        repeated TargetInput target_inputs = 18;
}

message Encounter {
	// Proto version at the time these encounter settings were saved. If you
	// make any changes to this proto that will break saved browser data or
	// old sim links, then make sure to increment the current_version_number
	// option within the ProtoVersion message at the top of this file, and
	// also modify the updateProtoVersion() method of ui/core/encounter.ts .
	int32 api_version = 9;

	double duration = 1;

	// Variation in the duration
	double duration_variation = 2;

	// The ratio of the encounter duration, between 0 and 1, for which the targets
	// will be in execute range (<= 20%) for the purposes of Warrior Execute, Mage Molten
	// Fury, etc.
	double execute_proportion_20 = 3;

	// Key for Affliction warlock Drain Soul
	double execute_proportion_25 = 7;

	// Same as execute_proportion but for 35%.
	double execute_proportion_35 = 4;

	// Same as execute_proportion but for 45%.
	double execute_proportion_45 = 10;

	// Same as execute_proportion but for > 90%.
	double execute_proportion_90 = 8;

	// If set, will use the targets health value instead of a duration for fight length.
	bool use_health = 5;

	// If type != Simple or Custom, then this may be empty.
	repeated Target targets = 6;

}

message PresetTarget {
	string path = 1;
	Target target = 2;
}
message PresetEncounter {
	string path = 1;
	repeated PresetTarget targets = 2;
}

message ItemRandomSuffix {
	int32 id = 1;
	string name = 2;
	repeated double stats = 3;
}

message ItemSpec {
	int32 id = 1;
	int32 random_suffix = 2;
	int32 enchant = 3;
	repeated int32 gems = 4;
}


message EquipmentSpec {
	repeated ItemSpec items = 1;
}

enum ConsumableType {
	ConsumableTypeUnknown = 0;
	ConsumableTypePotion = 1;
	ConsumableTypeFlask = 2;
	ConsumableTypeFood = 3;
	ConsumableTypeScroll = 4;
	ConsumableTypeExplosive = 5;
	ConsumableTypeBattleElixir = 6;
	ConsumableTypeGuardianElixir = 7;
}




// Extra enum for describing which items are eligible for an enchant, when
// ItemType alone is not enough.
enum EnchantType {
	EnchantTypeNormal = 0;
	EnchantTypeTwoHand = 1;
	EnchantTypeShield = 2;
	EnchantTypeKit = 3;
	EnchantTypeStaff = 4;
	EnchantTypeOffHand = 5;
}

message UnitReference {
	enum Type {
		Unknown = 0;
		Player = 1;
		Target = 2;
		Pet = 3;
		Self = 4;
		CurrentTarget = 5;
		AllPlayers = 6;
		AllTargets = 7;
		PreviousTarget = 8;
		NextTarget = 9;
	}

	// The type of unit being referenced.
	Type type = 2;

	// Index of the player/target/pet/etc depending on value of type.
	int32 index = 3;

	// Reference to the owner, only used iff this is a pet.
	UnitReference owner = 4;
}

// ID for actions that aren't spells or items.
enum OtherAction {
	OtherActionNone = 0;
	OtherActionWait = 1;
	OtherActionManaRegen = 2;
	OtherActionEnergyRegen = 5;
	OtherActionFocusRegen = 6;
	OtherActionManaGain = 10; // For threat generated from mana gains.
	OtherActionRageGain = 11; // For threat generated from rage gains.
	OtherActionAttack = 3; // A white hit, can be main hand or off hand.
	OtherActionShoot = 4; // Default shoot action using a wand/bow/gun.
	OtherActionPet = 7; // Represents a grouping of all pet actions. Only used by the UI.
	OtherActionRefund = 8; // Refund of a resource like Energy or Rage, when the ability didn't land.
	OtherActionDamageTaken = 9; // Indicates damage taken; used for rage gen.
	OtherActionHealingModel = 12; // Indicates healing received from healing model.
	OtherActionPotion = 17; // Used by APL to generically refer to either the prepull or combat potion.
	OtherActionMove = 20; // Used by movement to be able to show it in timeline
	OtherActionPrepull = 21; // Indicated prepull specific action
	OtherActionEncounterStart = 22; // Indicated resources gained or lost at the start of an encounter
}

message ActionID {
	// Identifies this action.
	oneof raw_id {
		int32 spell_id = 1;
		int32 item_id = 2;
		OtherAction other_id = 3;
	}

	// Distinguishes between different versions of the same action.
	// Currently the only use for this is Shaman Lightning Overload.
	int32 tag = 4;
}

// Custom options for a particular cooldown.
message Cooldown {
	// Identifies the cooldown to which these settings will apply.
	ActionID id = 1;

	// Fixed times at which to use this cooldown. Each value corresponds to a usage,
	// e.g. first value is the first usage, second value is the second usage.
	// Any usages after the specified timings will occur as soon as possible, subject
	// to the ShouldActivate() condition.
	repeated double timings = 2;
}

message Cooldowns {
	repeated Cooldown cooldowns = 1;

	// % HP threshold, below which defensive cooldowns can be used.
	double hp_percent_for_defensives = 2;
}

message HealingModel {
	// Healing per second to apply.
	double hps = 1;
	// How often healing is applied.
	double cadence_seconds = 2;
	// Variation in the cadence.
	double cadence_variation = 4;
	// Fraction of each heal to model as an absorb shield.
	double absorb_frac = 5;
	// TMI burst window bin size
	int32 burst_window = 3;
}

message CustomRotation {
	repeated CustomSpell spells = 1;
}

message CustomSpell {
	// This should usually be a spec-specific enum value.
	int32 spell = 1;

	// Desired cast rate for this spell. Not used by most custom rotations, this is
	// primarily for healers.
	double casts_per_minute = 2;
}

message ItemSwap {
	repeated ItemSpec items = 1;
	UnitStats prepull_bonus_stats = 2;
}

message Duration {
	double ms = 1;
}

enum RotationType {
	UnknownType = 0;
	SingleTarget = 1;
	Aoe = 3;
	Custom = 2;
}

message UUID {
	string value = 1;
}

// Values are expected to be in increasing order of severity
enum LogLevel {
	Information = 0;
	Warning = 1;
	Error = 2;

	Undefined = -1;
}
